code-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: "service-code-server"
  namespace: "code-server"
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: "code-server"
