code-server-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "code-server-ingress"
  namespace: "code-server"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: code-server
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "service-code-server"
              servicePort: 80
